--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,11 @@
+h1 {
+    font-weight: 300;
+    text-align: center;
+    color: #000080;
+    font-style: oblique;
+    font-family: fantasy
+    font-size: 32px;
+}
 #container{
     width: 1366px;
     overflow: hidden;
