[Add] - Vertical line separator

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,14 @@ h1 {
     font-family: fantasy
     font-size: 32px;
 }
+.vl {
+    border-left: 2px solid gray;
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+
+}
 #container{
     width: 1366px;
     overflow: hidden;
